@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="<TMPL_VAR NAME="CHARACTER_ENCODING">"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
-<title><TMPL_VAR NAME="FEED_TITLE"></title>
+<title><TMPL_VAR NAME="SITE_TITLE">: <TMPL_VAR NAME="PAGE_TITLE"></title>
 <subtitle><TMPL_VAR NAME="FEED_SUBTITLE"></subtitle>
 <id><TMPL_VAR NAME="SITE_URL"></id>
 <link href="<TMPL_VAR NAME="SITE_URL">"/>
